--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,13 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Yew App</title>
-    </head>
-    <body></body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yew App</title>
+    <link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+    <div id="app"></div>
+    <script src="/pkg/bundle.js"></script>
+</body>
 </html>
